more maemo5 changes

--- a/Makefile.in
+++ b/Makefile.in
@@ -259,6 +259,7 @@ localedir = @localedir@
 localstatedir = @localstatedir@
 mandir = @mandir@
 mkdir_p = @mkdir_p@
+numptyphysicsdir = @numptyphysicsdir@
 oldincludedir = @oldincludedir@
 pdfdir = @pdfdir@
 prefix = @prefix@
@@ -271,7 +272,6 @@ sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 noinst_LIBRARIES = libbox2d.a
 INCLUDES = -IBox2D/Include
-numptyphysicsdir = $(datadir)/numptyphysics
 desktopentry_DATA = data/numptyphysics.desktop
 serviceentry_DATA = data/numptyphysics.service
 icon_26x26_DATA = data/icon26/numptyphysics.png 
@@ -311,7 +311,11 @@ numptyphysics_DATA = \
 	data/L99_Gravity_Test.nph \
 	data/edit.png \
 	data/next.png \
-	data/paper.png \
+	data/paper.jpg \
+	data/pen.png \
+	data/tick.png \
+	data/blank.png \
+	data/share.png \
 	data/pause.png \
 	data/play.png \
 	data/reset.png \
