--- a/data/numptyphysics.desktop
+++ b/data/numptyphysics.desktop
@@ -13,7 +13,7 @@ X-Window-Icon-Dimmed=numptyphysics
 X-HildonDesk-ShowInToolbar=true
 X-Osso-Type=application/x-executable
 X-Osso-Service=org.maemo.garage.numptyphysics
-MimeType=application/x-numptyphysics-level;application/x-numptyphysics-collection
+MimeType=application/x-numptyphysics-level;application/x-numptyphysics-collection;application/x-numptyphysics-demo
 
 [X-Osso-URI-Actions]
 http=X-Osso-URI-Action-Open;
